--- a/public/css/exhibition.css
+++ b/public/css/exhibition.css
@@ -1,14 +1,4 @@
-/*
-*{
-    border: 1px black solid
+/* 注意事項 icon */
+.notice img{
+    width: 100%;
 }
-*/
-/* p{
-    text-align: center;
-    
-} */
-
-/* h1{
-    margin: 80px 0;
-    text-align: center;
-} */
