--- a/views/exhibition.ejs
+++ b/views/exhibition.ejs
@@ -105,12 +105,10 @@
 
     <hr />
 
-    <div class="container">
+    <div class="container margin_y">
       <div class="row align-items-center">
-        <div class="col-12">
-          <h1 class="header2">交通資訊</h1>
-        </div>
         <div class="col-6">
+          <h1 class="header2">交通資訊</h1>
           <p class="text1_3">
             地址：<br />11072臺北市信義區光復南路133號<br />
             捷運：<br />
@@ -134,7 +132,7 @@
           ></iframe>
         </div>
       </div>
-      <div class="row justify-content-center">
+      <div class="row justify-content-center margin_y">
         <div class="col-md">
           <h1 class="header2 text-center">展區導覽圖</h1>
         </div>
@@ -148,17 +146,19 @@
       </div>
       
 
-      <div class="row justify-content-center">
-        <div class="col-12">
+      <!-- 注意事項 -->
+      <div class="row justify-content-center margin_y">
+        <div class="col-md-12">
           <h1 class="header2 text-center">注意事項</h1>
         </div>
+        <!-- 第一行內文 -->
         <div class="col-4">
-          <div class="row">
-            <div class="col-6">
+          <div class="row justify-content-center">
+            <div class="col-6 notice">
               <img src="media/predictor.jpg" alt="">
             </div>
-            <div class="col-6">
-              <p>
+            <div class="col-6 align-self-center">
+              <p class="text-center">
                 <b>注意事項標題</b> <br>
                 注意事項內文
               </p>
@@ -166,12 +166,12 @@
           </div>
         </div>
         <div class="col-4">
-          <div class="row">
-            <div class="col-6">
+          <div class="row justify-content-center">
+            <div class="col-6 notice">
               <img src="media/predictor.jpg" alt="">
             </div>
-            <div class="col-6">
-              <p>
+            <div class="col-6 align-self-center">
+              <p class="text-center">
                 <b>注意事項標題</b> <br>
                 注意事項內文
               </p>
@@ -179,12 +179,39 @@
           </div>
         </div>
         <div class="col-4">
-          <div class="row">
-            <div class="col-6">
+          <div class="row justify-content-center">
+            <div class="col-6 notice">
               <img src="media/predictor.jpg" alt="">
             </div>
-            <div class="col-6">
-              <p>
+            <div class="col-6 align-self-center">
+              <p class="text-center">
+                <b>注意事項標題</b> <br>
+                注意事項內文
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- 第二行內文 -->
+        <div class="col-4">
+          <div class="row justify-content-center">
+            <div class="col-6 notice">
+              <img src="media/predictor.jpg" alt="">
+            </div>
+            <div class="col-6 align-self-center">
+              <p class="text-center">
+                <b>注意事項標題</b> <br>
+                注意事項內文
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="row justify-content-center">
+            <div class="col-6 notice">
+              <img src="media/predictor.jpg" alt="">
+            </div>
+            <div class="col-6 align-self-center">
+              <p class="text-center">
                 <b>注意事項標題</b> <br>
                 注意事項內文
               </p>
@@ -192,35 +219,36 @@
           </div>
         </div>
       </div>
+    </div>  
 
+    <!-- footer -->
+    <hr>
 
-
-
-      <!-- footer -->
-
-
-      <div class="row">
-        <div class="col">
-          <p>指導單位：<br />元智大學資訊學院</p>
-
-          <p></p>
+    <div class="container margin_y">
+        <div class="row align-items-center text-center">
+            <div class="col">
+                <p>
+                    指導單位：<br>元智大學資訊學院
+                <p>
+            </div>
+            <div class="col">
+                <p>
+                    主辦單位：<br>元智大學資訊傳播學系
+                <p>
+                
+            </div>
+            <div class="col">
+                <p>
+                    執行單位：<br>
+                    元智大學資訊傳播學系<br>
+                    第二十六屆畢業展覽籌備會
+                </p>
+                
+            </div>
+            
         </div>
-
-        <div class="col">
-          <p>主辦單位：<br />元智大學資訊傳播學系</p>
-
-          <p></p>
-        </div>
-
-        <div class="col">
-          <p>
-            執行單位：<br />
-            元智大學資訊傳播學系<br />
-            第二十六屆畢業展覽籌備會
-          </p>
-        </div>
-      </div>
     </div>
+    
   </body>
   <script src="../js/exhibition.js"></script>
 </html>
