--- a/views/home.ejs
+++ b/views/home.ejs
@@ -98,22 +98,25 @@
 
     <!-- 首頁內容 -->
     <div class="container">
+
+        <!-- 主視覺 -->
         <div class="row">
             <div class="col banner">
                 Key Vision
             </div>
         </div>
-        <div class="row">
-            <div class="col">
+        
+        <!-- 大標題 - 元智大學資訊傳播... -->
+        <div class="row justify-content-center margin_y">
+            <div class="col-md-12">
                 <h1 class="header1">
                     元智大學 <br>
                     資訊傳播學系第 26 屆 <br> 
                     畢業展覽
                 </h1>
             </div>
-        </div>
-        <div class="row">
-            <div class="col">
+            <!-- 大標題下的介紹內文 -->
+            <div class="col-md-12">
                 <p class="text1">
                     展覽主題介紹展覽主題介紹展覽主題介紹展覽主題介紹展覽主題介紹
                     展覽主題介紹展覽主題介紹展覽主題介紹展覽主題介紹展覽主題介紹
@@ -122,13 +125,14 @@
                 </p>
             </div>
         </div>
-        <div class="row">
-            <div class="col">
+
+        <!-- 展覽作品 -->
+        <div class="row justify-content-center margin_y">
+            
+            <div class="col-md-12">
                 <h2 class="header2 text-center">展覽作品</h2>
             </div>
-        </div>
-        <div class="row">
-            <div class="col">
+            <div class="col-md-12">
                 <p class="text1_2">
                     展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹
                     展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹
@@ -136,72 +140,72 @@
                     展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹
                 </p>
             </div>
+            <!-- 展覽作品 - 遊戲、行銷、影視、互動 圖文簡介 -->
+            <div class="col-md-12">
+                <div class="row row-cols-1 row-cols-sm-4 g-4">
+                    <!-- 遊戲 -->
+                    <div class="col">
+                        <div class="card text-center">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                            <h5 class="text1_3">遊戲</h5>
+                            <p class="text2">
+                                遊戲簡短敘述內文遊戲簡短敘述內文遊戲簡短敘述內文遊戲簡短敘述內文
+                            </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 互動 -->
+                    <div class="col">
+                        <div class="card text-center">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                            <h5 class="text1_3">互動</h5>
+                            <p class="text2">
+                                互動簡短敘述內文互動簡短敘述內文互動簡短敘述內文互動簡短敘述內文
+                            </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 影視 -->
+                    <div class="col">
+                        <div class="card text-center">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                            <h5 class="text1_3">影視動畫</h5>
+                            <p class="text2">
+                                影視簡短敘述內文影視簡短敘述內文影視簡短敘述內文影視簡短敘述內文
+                            </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 行銷 -->
+                    <div class="col">
+                        <div class="card text-center">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                            <h5 class="text1_3">行銷</h5>
+                            <p class="text2">
+                                行銷簡短敘述內文行銷簡短敘述內文行銷簡短敘述內文行銷簡短敘述內文
+                            </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div class="row row-cols-1 row-cols-sm-4 g-4">
-            <div class="col">
-                <div class="card text-center">
-                    <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                       <h5 class="text1_3">遊戲</h5>
-                       <p class="text2">
-                        遊戲簡短敘述內文遊戲簡短敘述內文遊戲簡短敘述內文遊戲簡短敘述內文
-                       </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card text-center">
-                    <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                       <h5 class="text1_3">互動</h5>
-                       <p class="text2">
-                        互動簡短敘述內文互動簡短敘述內文互動簡短敘述內文互動簡短敘述內文
-                       </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card text-center">
-                    <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                       <h5 class="text1_3">影視動畫</h5>
-                       <p class="text2">
-                        影視簡短敘述內文影視簡短敘述內文影視簡短敘述內文影視簡短敘述內文
-                       </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card text-center">
-                    <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                       <h5 class="text1_3">行銷</h5>
-                       <p class="text2">
-                        行銷簡短敘述內文行銷簡短敘述內文行銷簡短敘述內文行銷簡短敘述內文
-                       </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <!-- <div class="row home_works">
-            <div class="col home_work">
-                <img src="media/predictor.jpg" alt="">
-            </div>
-            <div class="col home_work"></div>
-            <div class="col home_work"></div>
-            <div class="col home_work"></div>
-        </div> -->
-
+        
+        
 
     </div>
     
+    <!-- footer -->
+
     <hr>
 
-    <div class="container">
-        <div class="row footer">
+    <div class="container margin_y">
+        <div class="row align-items-center text-center">
             <div class="col">
                 <p>
                     指導單位：<br>元智大學資訊學院
