--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -98,7 +98,7 @@
 
     <!-- 影展內容 -->
 
-    <div class="container">
+    <div class="container margin_y">
 
         <!-- 宣傳片 -->
 
@@ -108,31 +108,39 @@
             </iframe>
         </div>
 
-        <!-- 介紹 -->
+        <!-- ----------------介紹內容--------------- -->
 
-        <div class="card">
-            <div class="row">
-                <div class="card-body">
-                    <h1 class="card-title">
-                        元智大學資訊傳播學系 <br>
-                        第 26 屆影展 
-                    </h1>
-                    <p id="date">
-                        112 年 04 月 26 日
-                    </p>
-                    <p class="card-text">
-                        介紹內文介紹內文介紹介紹內文介紹內文介紹介紹內文
-                        介紹內文介紹介紹內文介紹內文介紹介紹內文介紹內文
-                        介紹介紹內文介紹內文介紹介紹內文介紹內文介紹內文
-                        介紹內文介紹內文介紹介紹內文介紹內文介紹介紹內文
-                        介紹內文介紹介紹內文介紹內文介紹介紹內文介紹內文
-                        介紹介紹內文
-                    </p>
-                </div>
+        <!-- 大標題、日期、大標題下介紹內文 -->
+        <div class="row justify-content-center margin_y">
+            <div class="col-md-12">
+                <h1 class="header1">
+                    元智大學資訊傳播學系 <br>
+                    第 26 屆影展
+                </h1>
+            </div>
+            <div class="col-md-12">
+                <p id="date">
+                    112 年 04 月 26 日
+                </p>
+            </div>
+            <div class="col-md-12">
+                <p class="text1_2">
+                    介紹內文介紹內文介紹介紹內文介紹內文介紹介紹內文
+                    介紹內文介紹介紹內文介紹內文介紹介紹內文介紹內文
+                    介紹介紹內文介紹內文介紹介紹內文介紹內文介紹內文
+                    介紹內文介紹內文介紹介紹內文介紹內文介紹介紹內文
+                    介紹內文介紹介紹內文介紹內文介紹介紹內文介紹內文
+                    介紹介紹內文
+                </p>
             </div>
         </div>
 
         <!-- 作品介紹 -->
+
+        <div class="row justify-content-center margin_y">
+            
+        </div>
+
 
         <div class="card">
 
@@ -176,8 +184,8 @@
 
     <hr>
 
-    <div class="container">
-        <div class="row footer">
+    <div class="container margin_y">
+        <div class="row align-items-center text-center">
             <div class="col">
                 <p>
                     指導單位：<br>元智大學資訊學院
@@ -187,7 +195,7 @@
                 <p>
                     主辦單位：<br>元智大學資訊傳播學系
                 <p>
-
+                
             </div>
             <div class="col">
                 <p>
@@ -195,11 +203,11 @@
                     元智大學資訊傳播學系<br>
                     第二十六屆畢業展覽籌備會
                 </p>
-
+                
             </div>
-
+            
         </div>
-    </div>    
+    </div>   
 </body>
 <script src="../js/portfolio.js"></script>
 
