--- a/views/about.ejs
+++ b/views/about.ejs
@@ -95,7 +95,9 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container margin_y">
+
+        <!-- banner 畢籌大合照 -->
 
         <div class="row">
             <div class="col banner">
@@ -105,174 +107,226 @@
 
         <!-- 獵人名單 -->
 
-        <div class="row">
-            <div class="col">
-                <h1>獵人名單</h1>
-            </div>
-        </div>
+        <div class="row justify-content-center margin_y">
 
-        <div class="row row-cols-1 row-cols-md-2 g-4">
-            <div class="col">
-              <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title"> 設計組 </h5>
-                
-                    <div class="row row-cols-1 row-cols-md-4">
-                        <div class="col">
-                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                        </div>
-                        <div class="col">
-                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                        </div>
-                        <div class="col">
-                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                        </div>
-                        <div class="col">
-                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                        </div>
-                    </div>
-                    <div class="row row-cols-1 row-cols-md-5">
-                        <div class="col">
-                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                        </div>
-                        <div class="col">
-                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                        </div>
-                        <div class="col">
-                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                        </div>
-                        <div class="col">
-                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                        </div>
-                        <div class="col">
-                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                        </div>
-                    </div>
-                    <div class="row row-cols-1 row-cols-md-4">
-                        <div class="col">
-                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                        </div>
-                        <div class="col">
-                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                        </div>
-                        <div class="col">
-                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                        </div>
-                        <div class="col">
-                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                        </div>
-                    </div>
-                </div>
-              </div>
+            <!-- 標題 -->
+
+            <div class="col-md-12">
+                <h1 class="header2">獵人名單</h1>
             </div>
-            
-            <div class="col">
-              <div class="card">
-                <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">姓名</h5>
-                    <p class="card-text">
-                        內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹
-                    </p>
-                    <h5 class="card-title">經歷</h5>
-                    <p class="card-text">
-                        <ul>
-                            <li>經歷介紹</li>
-                            <li>經歷介紹</li>
-                            <li>經歷介紹</li>
-                        </ul>
-                    </p>
+
+            <!-- 設計、科技連結 -->
+
+            <div class="row row-cols-1 row-cols-md-2">
+
+                <!-- 設計組 -->
+                <div class="col">
+                  <div class="card">
+                    <div class="card-body padding_y_40">
+                        <h5 class="card-title header3 text-center"> 設計組 </h5>
+                    
+                        <div class="row justify-content-center">
+                            <div class="col-2">
+                                <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            </div>
+                            <div class="col-2">
+                                <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            </div>
+                            <div class="col-2">
+                                <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            </div>
+                            <div class="col-2">
+                                <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            </div>
+                        </div>
+                        <div class="row justify-content-center">
+                            <div class="col-2">
+                                <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            </div>
+                            <div class="col-2">
+                                <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            </div>
+                            <div class="col-2">
+                                <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            </div>
+                            <div class="col-2">
+                                <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            </div>
+                            <div class="col-2">
+                                <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            </div>
+                        </div>
+                        <div class="row justify-content-center">
+                            <div class="col-2">
+                                <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            </div>
+                            <div class="col-2">
+                                <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            </div>
+                            <div class="col-2">
+                                <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            </div>
+                            <div class="col-2">
+                                <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                  </div>
                 </div>
-              </div>
+                <!-- 科技組 -->
+                <div class="col">
+                    <div class="card">
+                      <div class="card-body padding_y_40">
+                          <h5 class="card-title header3 text-center"> 科技組 </h5>
+                      
+                          <div class="row justify-content-center">
+                              <div class="col-2">
+                                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                              </div>
+                              <div class="col-2">
+                                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                              </div>
+                              <div class="col-2">
+                                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                              </div>
+                              <div class="col-2">
+                                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                              </div>
+                          </div>
+                          <div class="row justify-content-center">
+                              <div class="col-2">
+                                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                              </div>
+                              <div class="col-2">
+                                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                              </div>
+                              <div class="col-2">
+                                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                              </div>
+                              <div class="col-2">
+                                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                              </div>
+                              <div class="col-2">
+                                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                              </div>
+                          </div>
+                          <div class="row justify-content-center">
+                              <div class="col-2">
+                                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                              </div>
+                              <div class="col-2">
+                                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                              </div>
+                              <div class="col-2">
+                                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                              </div>
+                              <div class="col-2">
+                                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                              </div>
+                          </div>
+                      </div>
+                    </div>
+                </div>
+
             </div>
 
         </div>
 
         <!-- 贊助夥伴 -->
 
-        <div class="row">
-            <div class="col">
-                <h1>贊助夥伴</h1>
-            </div>
-        </div>
+        <div class="row margin_y">
 
-        <div class="row row-cols-1 row-cols-md-6 g-4">
-            <div class="col">
-              <div class="card text-center">
-                <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">廠商名稱</h5>
-                </div>
-              </div>
+            <!-- 標題 -->
+            <div class="col-md-12">
+                <h1 class="header2 text-center">贊助夥伴</h1>
             </div>
-            <div class="col">
-                <div class="card text-center">
-                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                      <h5 class="card-title">廠商名稱</h5>
+
+            <!-- 贊助商LOGO -->
+            <div class="row row-cols-1 row-cols-md-6">
+                <div class="col">
+                  <div class="card text-center">
+                    <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">廠商名稱</h5>
+                    </div>
                   </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card text-center">
-                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                      <h5 class="card-title">廠商名稱</h5>
-                  </div>
+                <div class="col">
+                    <div class="card text-center">
+                      <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                          <h5 class="card-title">廠商名稱</h5>
+                      </div>
+                    </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card text-center">
-                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                      <h5 class="card-title">廠商名稱</h5>
-                  </div>
+                <div class="col">
+                    <div class="card text-center">
+                      <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                          <h5 class="card-title">廠商名稱</h5>
+                      </div>
+                    </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card text-center">
-                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                      <h5 class="card-title">廠商名稱</h5>
-                  </div>
+                <div class="col">
+                    <div class="card text-center">
+                      <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                          <h5 class="card-title">廠商名稱</h5>
+                      </div>
+                    </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card text-center">
-                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                      <h5 class="card-title">廠商名稱</h5>
-                  </div>
+                <div class="col">
+                    <div class="card text-center">
+                      <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                          <h5 class="card-title">廠商名稱</h5>
+                      </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card text-center">
+                      <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                          <h5 class="card-title">廠商名稱</h5>
+                      </div>
+                    </div>
                 </div>
             </div>
         </div>
 
         <!-- 聯絡我們 -->
 
-        <div class="row">
+        <div class="row margin_y">
+
+            <!-- 標題 -->
+
             <div class="col">
-                <h1>聯絡我們</h1>
+                <h1 class="header2">聯絡我們</h1>
+            </div>
+
+            <!-- 內容 -->
+
+            <div class="row row-cols-1 row-cols-sm-2">
+                <div class="col">
+                    <div class="card contact text-center">
+                        <img src="media/instagram.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                           <h5 class="card-title">IG名稱</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card contact text-center">
+                        <img src="media/facebook.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                           <h5 class="card-title">FB名稱</h5>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="row row-cols-1 row-cols-sm-2 g-4">
-            <div class="col">
-                <div class="card contact text-center">
-                    <img src="media/instagram.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                       <h5 class="card-title">IG名稱</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card contact text-center">
-                    <img src="media/facebook.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                       <h5 class="card-title">FB名稱</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
 
 
     </div>
