--- a/views/exhibition.ejs
+++ b/views/exhibition.ejs
@@ -103,33 +103,38 @@
       </div>
     </nav>
 
-    <hr />
-
     <div class="container margin_y">
-      <div class="row align-items-center">
-        <div class="col-6">
-          <h1 class="header2">交通資訊</h1>
-          <p class="text1_3">
-            地址：<br />11072臺北市信義區光復南路133號<br />
-            捷運：<br />
-            搭乘捷運板南線（藍）至捷運市政府站１號出口，步行約400公尺<br />
-            搭乘捷運板南線（藍）至捷運市政府站２號出口，步行約400公尺<br />
-            搭乘捷運板南線（藍）至捷運國父紀念館站５號出口，步行約500公尺<br />
-            自行開車：<br />
-            園區內無設有停車場，停車請至松山高中或市府轉運站<br />
-            更多停車資訊可至以下網頁查詢：http://www.tpis.nat.gov.tw/
-          </p>
+      <div class="row">
+        <div class="col">
+          <h1 class="header2 text-center">交通資訊</h1>
         </div>
-        <div class="col-6">
+      </div>
+      <div class="row row-cols-1 row-cols-md-2 align-items-center">
+        <div class="col">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6079.2023127538305!2d121.56096415201237!3d25.04373331772975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abb5f15f40c3%3A0x94694552be3aa6c0!2z5Y2X5ZCR6KO96I-45bel5aC0!5e0!3m2!1szh-TW!2stw!4v1667366172066!5m2!1szh-TW!2stw"
             width="100%"
-            height="500px"
+            height="600px"
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
+        </div>
+        <div class="col">
+          <p class="text1_3">
+            <b>地點：</b>松山文創園區 <br />
+            <b>地址：</b><br />11072臺北市信義區光復南路133號 <br />
+            <b>捷運：</b><br />
+            搭乘捷運板南線（藍）至捷運市政府站１號出口，步行約400公尺<br />
+            搭乘捷運板南線（藍）至捷運市政府站２號出口，步行約400公尺<br />
+            搭乘捷運板南線（藍）至捷運國父紀念館站５號出口，步行約500公尺<br />
+            <b>客運：</b><br />
+            搭乘臺北市公車212、232、240、270、299、600、919、忠孝幹線至聯合報站下車<br />
+            <b>自行開車：</b><br />
+            園區內無設有停車場，停車請至松山高中或市府轉運站<br />
+            更多停車資訊可至以下網頁查詢：http://www.tpis.nat.gov.tw/
+          </p>
         </div>
       </div>
       <div class="row justify-content-center margin_y">
@@ -147,12 +152,12 @@
       
 
       <!-- 注意事項 -->
-      <div class="row justify-content-center margin_y">
+      <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center margin_y">
         <div class="col-md-12">
           <h1 class="header2 text-center">注意事項</h1>
         </div>
         <!-- 第一行內文 -->
-        <div class="col-4">
+        <div class="col">
           <div class="row justify-content-center">
             <div class="col-6 notice">
               <img src="media/predictor.jpg" alt="">
@@ -165,7 +170,7 @@
             </div>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col">
           <div class="row justify-content-center">
             <div class="col-6 notice">
               <img src="media/predictor.jpg" alt="">
@@ -178,7 +183,7 @@
             </div>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col">
           <div class="row justify-content-center">
             <div class="col-6 notice">
               <img src="media/predictor.jpg" alt="">
@@ -192,7 +197,7 @@
           </div>
         </div>
         <!-- 第二行內文 -->
-        <div class="col-4">
+        <div class="col">
           <div class="row justify-content-center">
             <div class="col-6 notice">
               <img src="media/predictor.jpg" alt="">
@@ -205,7 +210,7 @@
             </div>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col">
           <div class="row justify-content-center">
             <div class="col-6 notice">
               <img src="media/predictor.jpg" alt="">
