--- a/views/home.ejs
+++ b/views/home.ejs
@@ -97,7 +97,7 @@
 
 
     <!-- 首頁內容 -->
-    <div class="container">
+    <div class="container margin_y">
 
         <!-- 主視覺 -->
         <div class="row">
