--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -138,24 +138,20 @@
         <!-- 作品介紹 -->
 
         <div class="row justify-content-center margin_y">
-            
-        </div>
 
-
-        <div class="card">
-
-            <div class="row">
-                <h2 class="card-title film_title text-center">
+            <div class="col-md-12">
+                <h2 class="card-title text-center header2">
                     影視作品
                 </h2>
             </div>
 
-            <div class="row row-cols-1 row-cols-sm-3 g-3">
+            <div class="row row-cols-1 row-cols-sm-4 g-4">
                 <div class="col">
                     <div class="card text-center">
                         <img src="media/predictor.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                           <h5 class="card-title">作品名稱</h5>
+                            <h5 class="card-title text1_3">作品名稱</h5>
+                            <p class="card-text text2">簡短作品敘述簡短作品敘述簡短作品敘述簡短作品敘述</p>
                         </div>
                     </div>
                 </div>
@@ -163,7 +159,8 @@
                     <div class="card text-center">
                         <img src="media/predictor.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                           <h5 class="card-title">作品名稱</h5>
+                            <h5 class="card-title text1_3">作品名稱</h5>
+                            <p class="card-text text2">簡短作品敘述簡短作品敘述簡短作品敘述簡短作品敘述</p>
                         </div>
                     </div>
                 </div>
@@ -171,13 +168,26 @@
                     <div class="card text-center">
                         <img src="media/predictor.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                           <h5 class="card-title">作品名稱</h5>
+                            <h5 class="card-title text1_3">作品名稱</h5>
+                            <p class="card-text text2">簡短作品敘述簡短作品敘述簡短作品敘述簡短作品敘述</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card text-center">
+                        <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text1_3">作品名稱</h5>
+                            <p class="card-text text2">簡短作品敘述簡短作品敘述簡短作品敘述簡短作品敘述</p>
                         </div>
                     </div>
                 </div>
             </div>
 
         </div>
+
+
+        
     </div>
  
     <!-- footer -->
